# qtlayershell

./: CMakeLists.txt  README.md  hello.qml  layer-shell.json  main.cpp  meson.build  qlayerview.cpp  qlayerview_p.h  quickhelloworld.pro  qwaylandlayershellintegration.cpp  qwaylandlayershellintegration_p.h  qwaylandlayershellintegrationplugin.cpp
demo/: hello.qml  main.cpp  main.qrc  meson.build
include/: layerview.h
include/QtLayerShell/: LayerView  layershell_p.h  layershellintegration_p.h  layersurface_p.h  layerview.h
protos/: meson.build  wlr-layer-shell-unstable-v1.xml
qtlayershell/: layershell.cpp  layershellintegration.cpp  layershellintegrationplugin.cpp  layersurface.cpp  layerview.cpp  meson.build  qwaylandlayershell.cpp  qwaylandlayershell_p.h  qwaylandlayersurface.cpp  qwaylandlayersurface_p.h
